Prints basic data.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,22 @@
 {% extends "base.html" %}
 
 {% block page_content %}
+<table class="table table-bordered table-striped">
+    <tr>
+        <th>Payload</th>
+        <th>Return code</th>
+        <th>Headers length</th>
+        <!--<th>Headers</th>-->
+        <th>Body length</th>
+    </tr>
     {% for output in outputs %}
-        <p>{{ output }}</p>
+        <tr>
+            <td>{{ output.payload_item }}</td>
+            <td>{{ output.return_code }}</td>
+            <td>{{ output.headers_length }}</td>
+            <!--<td>{{ output.headers }}</td>-->
+            <td>{{ output.body_length }}</td>
+        </tr>
     {% endfor %}
+</table>
 {% endblock %}
