--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,18 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content %}
-<table class="table table-bordered table-striped">
-    <tr>
-        <th>Payload</th>
-        <th>Return code</th>
-        <th>Headers length</th>
-        <!--<th>Headers</th>-->
-        <th>Body length</th>
-    </tr>
-    {% for output in outputs %}
-        <tr>
-            <td>{{ output.payload_item }}</td>
-            <td>{{ output.return_code }}</td>
-            <td>{{ output.headers_length }}</td>
-            <!--<td>{{ output.headers }}</td>-->
-            <td>{{ output.body_length }}</td>
-        </tr>
-    {% endfor %}
-</table>
+<!--<form action="">-->
+    <!--<dl>-->
+        <!--<dt>HTTP params</dt>-->
+        <!--<dd>{{ form.http_params }}</dd>-->
+        <!--<dt>Payload strings</dt>-->
+        <!--<dd>{{ form.payload_strings }}</dd>-->
+    <!--</dl>-->
+    <!--<p>{{ form.submit }}</p>-->
+<!--</form>-->
+
+<div class="row">
+    {{ wtf.quick_form(form) }}
+</div>
 {% endblock %}
