--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,13 @@
 <!--</form>-->
 
 <div class="row">
-    {{ wtf.quick_form(form) }}
+    <form class="form form-horizontal" method="post" role="form">
+        {{ form.hidden_tag() }}
+        {{ wtf.form_field(form.endpoint) }}
+        {{ wtf.form_field(form.http_params) }}
+        {{ wtf.form_field(form.payload_strings) }}
+        {{ wtf.form_field(form.submit) }}
+    </form>
+    <!--{{ wtf.quick_form(form) }}-->
 </div>
 {% endblock %}
